--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -23,8 +23,6 @@
   "txt-close": "Close",
   "txt-show": "Show",
   "txt-tips": "Tips",
-  "txt-modified": "Modified",
-  "txt-notModified": "Not Modified",
   "txt-layout-setting": "Layout Setting",
   "txt-account": "Account",
   "txt-accounts": "Accounts",
@@ -337,21 +335,34 @@
     "txt-isOwnerNull": "No Owner",
     "txt-isAreaNull": "No Area",
     "txt-isSeatNull": "No Seat",
+    "txt-title-scanFile": "惡意程式資訊",
+    "txt-title-gcbDetection": "GCB漏洞掃描資訊",
+    "txt-title-getFileIntegrity": "檔案完整性掃描資訊",
+    "txt-title-getEventTracing": "事件代碼資訊",
+    "txt-title-getProcessMonitorResult": "程序異動掃描資訊",
+    "txt-title-getVansCpe": "VANS弱點掃描CPE資訊",
+    "txt-title-getVansCve": "VANS弱點掃描CVE資訊",
     "txt-peFile": "PE File",
     "txt-peFileExtension": "PE File Extension",
     "txt-verifyTrust": "Verified Trust",
-    "txt-malwareInfo": "Malware Information",
-    "txt-hashMD5": "Hash Value (MD5)",
     "txt-fileSize": "File Size",
     "txt-isPEfile": "Is PE?",
     "txt-isPEextension": "Is PE Extension?",
     "txt-isSignature": "Is valid signature?",
     "txt-suspiciousFilePath": "Suspicious Filepath",
+    "txt-originalFactory": "Factory Settings",
+    "txt-systemType": "System",
+    "txt-checkResult": "Result",
+    "txt-md5Modified": "MD5 Not Modified",
+    "txt-notWhiteList": "Not in a Whitelist",
     "txt-basicInfo": "Basic Info",
     "txt-availableHost": "Available Host",
     "txt-vendor": "Vendor",
     "txt-product": "Product",
-    "txt-version": "Version"
+    "txt-version": "Version",
+    "txt-update": "Update",
+    "txt-edition": "Edition",
+    "txt-language": "Language"
   },
 
   "alert": {
