--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -23,8 +23,6 @@
   "txt-close": "關閉",
   "txt-show": "顯示",
   "txt-tips": "提示",
-  "txt-modified": "異動",
-  "txt-notModified": "無異動",
   "txt-layout-setting": "版面設定",
   "txt-account": "帳號",
   "txt-accounts": "帳號",
@@ -337,21 +335,34 @@
     "txt-isOwnerNull": "未設定使用者",
     "txt-isAreaNull": "未設定樓層",
     "txt-isSeatNull": "未設定座位",
+    "txt-title-scanFile": "惡意程式資訊",
+    "txt-title-gcbDetection": "GCB漏洞掃描資訊",
+    "txt-title-getFileIntegrity": "檔案完整性掃描資訊",
+    "txt-title-getEventTracing": "事件代碼資訊",
+    "txt-title-getProcessMonitorResult": "程序異動掃描資訊",
+    "txt-title-getVansCpe": "VANS弱點掃描CPE資訊",
+    "txt-title-getVansCve": "VANS弱點掃描CVE資訊",
     "txt-peFile": "PE檔",
     "txt-peFileExtension": "PE副檔名",
     "txt-verifyTrust": "有效簽章",
-    "txt-malwareInfo": "惡意程式資訊",
-    "txt-hashMD5": "Hash Value (MD5)",
     "txt-fileSize": "檔案大小",
     "txt-isPEfile": "是否為PE檔",
     "txt-isPEextension": "是否為PE副檔名",
     "txt-isSignature": "是否為有效簽章",
     "txt-suspiciousFilePath": "可疑檔案路徑",
+    "txt-originalFactory": "原廠設定名稱",
+    "txt-systemType": "種類",
+    "txt-checkResult": "檢測結果",
+    "txt-md5Modified": "MD5被修改",
+    "txt-notWhiteList": "不在白名單內",
     "txt-basicInfo": "基本資訊",
     "txt-availableHost": "存在主機",
     "txt-vendor": "廠商",
     "txt-product": "產品",
-    "txt-version": "版本"
+    "txt-version": "版號",
+    "txt-update": "更新",
+    "txt-edition": "版本",
+    "txt-language": "語言"
   },
 
   "alert": {
