Complete APIs implementations for Safety Scan tab in Host page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -335,13 +335,13 @@
     "txt-isOwnerNull": "No Owner",
     "txt-isAreaNull": "No Area",
     "txt-isSeatNull": "No Seat",
-    "txt-title-scanFile": "惡意程式資訊",
-    "txt-title-gcbDetection": "GCB漏洞掃描資訊",
-    "txt-title-getFileIntegrity": "檔案完整性掃描資訊",
-    "txt-title-getEventTracing": "事件代碼資訊",
-    "txt-title-getProcessMonitorResult": "程序異動掃描資訊",
-    "txt-title-getVansCpe": "VANS弱點掃描CPE資訊",
-    "txt-title-getVansCve": "VANS弱點掃描CVE資訊",
+    "txt-title-scanFile": "Malware Information",
+    "txt-title-gcbDetection": "GCB Information",
+    "txt-title-getFileIntegrity": "File Information",
+    "txt-title-getEventTraceResult": "Event Information",
+    "txt-title-getProcessMonitorResult": "Process Information",
+    "txt-title-getVansCpe": "CPE Information",
+    "txt-title-getVansCve": "CVE Information",
     "txt-peFile": "PE File",
     "txt-peFileExtension": "PE File Extension",
     "txt-verifyTrust": "Verified Trust",
@@ -350,11 +350,17 @@
     "txt-isPEextension": "Is PE Extension?",
     "txt-isSignature": "Is valid signature?",
     "txt-suspiciousFilePath": "Suspicious Filepath",
+    "txt-eventCode": "Event Code",
+    "txt-eventDesc": "Event Description",
+    "txt-_MD5_NewCreateFile": "Create",
+    "txt-_MD5_ModifyFile": "Modified",
+    "txt-_MD5_MissingFile": "Missing",
     "txt-originalFactory": "Factory Settings",
     "txt-systemType": "System",
     "txt-checkResult": "Result",
     "txt-md5Modified": "MD5 Not Modified",
     "txt-notWhiteList": "Not in a Whitelist",
+    "txt-hostCount": "Host Count",
     "txt-basicInfo": "Basic Info",
     "txt-availableHost": "Available Host",
     "txt-vendor": "Vendor",
