--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -338,7 +338,7 @@
     "txt-title-scanFile": "惡意程式資訊",
     "txt-title-gcbDetection": "GCB漏洞掃描資訊",
     "txt-title-getFileIntegrity": "檔案完整性掃描資訊",
-    "txt-title-getEventTracing": "事件代碼資訊",
+    "txt-title-getEventTraceResult": "事件代碼資訊",
     "txt-title-getProcessMonitorResult": "程序異動掃描資訊",
     "txt-title-getVansCpe": "VANS弱點掃描CPE資訊",
     "txt-title-getVansCve": "VANS弱點掃描CVE資訊",
@@ -350,11 +350,17 @@
     "txt-isPEextension": "是否為PE副檔名",
     "txt-isSignature": "是否為有效簽章",
     "txt-suspiciousFilePath": "可疑檔案路徑",
+    "txt-eventCode": "事件代碼",
+    "txt-eventDesc": "事件說明",
+    "txt-_MD5_NewCreateFile": "新增",
+    "txt-_MD5_ModifyFile": "修改",
+    "txt-_MD5_MissingFile": "刪除",
     "txt-originalFactory": "原廠設定名稱",
     "txt-systemType": "種類",
     "txt-checkResult": "檢測結果",
     "txt-md5Modified": "MD5被修改",
     "txt-notWhiteList": "不在白名單內",
+    "txt-hostCount": "分布主機數量",
     "txt-basicInfo": "基本資訊",
     "txt-availableHost": "存在主機",
     "txt-vendor": "廠商",
