Minor updates for Host Safety Scan tab.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -7,7 +7,10 @@
   "txt-on": "On",
   "txt-off": "Off",
   "txt-true": "True",
-  "txt-false": "False",  
+  "txt-false": "False",
+  "txt-low": "Low",
+  "txt-medium": "Medium",
+  "txt-high": "High",
   "txt-switch": "Switch",
   "txt-ok": "OK",
   "txt-time": "Time",
