--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -8,6 +8,9 @@
   "txt-off": "關",
   "txt-true": "是",
   "txt-false": "否",
+  "txt-low": "低",
+  "txt-medium": "中",
+  "txt-high": "高",
   "txt-switch": "開關",
   "txt-ok": "確認",
   "txt-time": "時間",
