Various fix for SCP HMD dialog. Add view details for Host Safety Scan tab dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -339,6 +339,7 @@
     "txt-isOwnerNull": "No Owner",
     "txt-isAreaNull": "No Area",
     "txt-isSeatNull": "No Seat",
+    "txt-isConnected": "Connected",
     "txt-title-scanFile": "Malware Information",
     "txt-title-gcbDetection": "GCB Information",
     "txt-title-getFileIntegrity": "File Information",
