--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -509,7 +509,13 @@
     "txt-recipientEmail": "Recipient Email",
     "txt-notifyEmail": "Notify Email Address",
     "txt-emailInvalid": "Please enter the correct email address",
-    "txt-sendSuccess": "Email has been sent successfully"
+    "txt-sendSuccess": "Email has been sent successfully",
+    "lineBot": {
+      "txt-lineBotSettings": "Line Notification Settings",
+      "txt-channelAccessToken": "Channel Access Token",
+      "txt-channelSecret": "Channel Secret",
+      "txt-qrcode": "QR Code Image Link"
+    }
   },
 
   "edge-management": {
