modify qrCode click line to lineDevelop

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -514,7 +514,8 @@
       "txt-lineBotSettings": "Line Notification Settings",
       "txt-channelAccessToken": "Channel Access Token",
       "txt-channelSecret": "Channel Secret",
-      "txt-qrcode": "QR Code Image Link"
+      "txt-qrcode": "Invite QR Code Image Link",
+      "txt-href-description": "Click QR-Code connect to Line-Developer Office"
     }
   },
 
