Content updates for each HMD for Host Safety Scan tab.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -355,8 +355,10 @@
     "txt-isPEextension": "Is PE Extension?",
     "txt-isSignature": "Is valid signature?",
     "txt-suspiciousFilePath": "Suspicious Filepath",
+    "txt-suspiciousFilePathExample": "Suspicious Filepath Example",
     "txt-eventCode": "Event Code",
-    "txt-eventDesc": "Event Description",
+    "txt-eventDescExample": "Event Description Example",
+    "txt-eventCount": "Event Count",
     "txt-_MD5_NewCreateFile": "Create",
     "txt-_MD5_ModifyFile": "Modified",
     "txt-_MD5_MissingFile": "Missing",
@@ -367,6 +369,7 @@
     "txt-notWhiteList": "Not in a Whitelist",
     "txt-hostCount": "Host Count",
     "txt-basicInfo": "Basic Info",
+    "txt-basicInfoExample": "Basic Info Example",
     "txt-availableHost": "Available Host",
     "txt-vendor": "Vendor",
     "txt-product": "Product",
