--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -355,8 +355,10 @@
     "txt-isPEextension": "是否為PE副檔名",
     "txt-isSignature": "是否為有效簽章",
     "txt-suspiciousFilePath": "可疑檔案路徑",
+    "txt-suspiciousFilePathExample": "可疑檔案路徑範例",
     "txt-eventCode": "事件代碼",
-    "txt-eventDesc": "事件說明",
+    "txt-eventDescExample": "事件說明範例",
+    "txt-eventCount": "事件次數",
     "txt-_MD5_NewCreateFile": "新增",
     "txt-_MD5_ModifyFile": "修改",
     "txt-_MD5_MissingFile": "刪除",
@@ -367,6 +369,7 @@
     "txt-notWhiteList": "不在白名單內",
     "txt-hostCount": "分布主機數量",
     "txt-basicInfo": "基本資訊",
+    "txt-basicInfoExample": "基本資訊範例",
     "txt-availableHost": "存在主機",
     "txt-vendor": "廠商",
     "txt-product": "產品",
