--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -29,11 +29,11 @@
 
   "-100": "呼叫網路服務失敗",
 
-  "-1000": "函式發生未預期錯誤",
+  "-1000": "發生未預期的錯誤",
   "-1001": "請輸入所有必填欄位",
-  "-1002": "函式物件找不到",
-  "-1003": "函式語法錯誤",
-  "-1004": "函式不允許執行",
+  "-1002": "物件不存在",
+  "-1003": "語法錯誤",
+  "-1004": "不允許此功能",
   "-1005": "密碼已到期",
   "-1006": "密碼錯誤超過5次，帳號已鎖定，請使用者聯絡系統管理員解鎖",
   "-1007": "帳號服務失敗",
@@ -81,6 +81,7 @@
   "-9012": "遠距連線失敗",
   "-9013": "參數為NULL",
   "-9014": "字串過長",
+  "-9015": "裝置不存在",
 
   "-9100": "解析Json失敗",
   "-9101": "解析檔案失敗",
