--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -523,7 +523,8 @@
       "txt-channelAccessToken": "Channel Access Token",
       "txt-channelSecret": "Channel Secret",
       "txt-qrcode": "加入會員 QR-Code 圖片連結",
-      "txt-href-description": "點擊QR-Code連到Line-Developer官網"
+      "txt-href-description": "點擊QR-Code連到Line-Developer官網",
+      "txt-accountId": "Line通知服務 加入會員ID: "
     }
   },
 
