Minor updates for display of Host Safety Scan tab.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -374,6 +374,10 @@
     "txt-vendor": "Vendor",
     "txt-product": "Product",
     "txt-version": "Version",
+    "txt-type": "Type",
+    "txt-software": "Software",
+    "txt-hardware": "Hardware",
+    "txt-os": "Operating System",
     "txt-update": "Update",
     "txt-edition": "Edition",
     "txt-language": "Language"
