--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -22,7 +22,7 @@
 	"txt-incident-isac-management": "ISAC Config Management",
 	"txt-incident-soc-management": "Government G-SOC Config Management",
 	"txt-incident-isac-config": "ISAC Config Settings",
-	"txt-incident-soc-config": "SOC參數設定",
+	"txt-incident-soc-config": "SOC Config Settings",
 	"txt-incident-events": "Incident Events",
 	"txt-incident-ttps": "TTPs",
 	"txt-prev-page": "Prev",
