--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -758,6 +758,7 @@
     "txt-selectIP": "請選擇IP欄位",
     "txt-testQuery": "查詢測試",
     "txt-generateTopology": "產生拓樸",
+    "txt-warningMsg": "網域範圍較大執行SNMP api會花費較多時間, 是否確認送出測試?",
     "txt-total": "總上傳筆數",
     "txt-success": "上傳成功筆數",
     "txt-fail": "上傳失敗筆數",
