Add 'Scanner' section back to the auto settings page. Update page enable switch.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -735,6 +735,7 @@
     "txt-password": "Admin Password",
     "txt-netflow": "Netflow",
     "txt-scanner": "Scanner",
+    "txt-newtorkTopology": "Network Topology",
     "txt-connectionsFail": "Connections Fail",
     "txt-connectionsSuccess": "Connections Success"
   },
