Remove custom time date picker for Config Edge page. Minor locale fix.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -190,6 +190,9 @@
   "txt-layout-change": "Layout changed，whether to save?",
   "txt-backToList": "$t(txt-back) to $t(txt-listText)",
   "txt-backToMap": "$t(txt-back) to $t(txt-map)",
+  "txt-invalidDateMessage": "Invalid Date Format",
+  "txt-minDateMessage": "Date should not be before minimal date",
+  "txt-maxDateMessage": "Date should not be after maximal date",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
@@ -569,7 +572,6 @@
     "txt-chassisLocation": "Chassis Location",
     "txt-contact": "Contact",
     "txt-upgradeTime": "Upgrade Date time",
-    "txt-activatTime": "Activate Date time",
     "txt-lastUpdateTime": "Last Update Time",
     "txt-anyTime": "Any Time",
     "txt-customTime": "Custom Time",
@@ -586,9 +588,6 @@
     "txt-edgeEditError5": "IP and Port field is NULL or Empty",
     "txt-edgeEditError6": "IP and Port field is Duplicated",
     "txt-edgeEditError7": "Edge (ipPort) is not Reachable",
-    "txt-edgeEditNoStartDate": "Edge start date is missing",
-    "txt-edgeEditNoEndDate": "Edge end date is missing",
-    "txt-edgeEditPastEndDate": "Edge end date must be a future date",
     "txt-threatEndTimeError": "End time must be before today",
     "txt-ipValidationFail": "Please enter a valid IP/Domain format",
     "txt-threatDateError": "Date cannot be a future date",
