--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -190,6 +190,9 @@
   "txt-layout-change": "版面布局已變更，是否儲存?",
   "txt-backToList": "$t(txt-back)$t(txt-listText)",
   "txt-backToMap": "$t(txt-back)$t(txt-map)",
+  "txt-invalidDateMessage": "時間格式錯誤",
+  "txt-minDateMessage": "時間不得在最小容許時間之前",
+  "txt-maxDateMessage": "時間不得在最大容許時間之後",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
@@ -570,7 +573,6 @@
     "txt-chassisLocation": "機櫃位置",
     "txt-contact": "窗口",
     "txt-upgradeTime": "升級時間",
-    "txt-activatTime": "啟用時間",
     "txt-lastUpdateTime": "最近更新時間",
     "txt-anyTime": "不限時段",
     "txt-customTime": "自訂時段",
@@ -587,9 +589,6 @@
     "txt-edgeEditError5": "Edge的IP與Port為空值",
     "txt-edgeEditError6": "Edge的IP與Port已有重複",
     "txt-edgeEditError7": "Edge(ipPort)不存在",
-    "txt-edgeEditNoStartDate": "Edge起始時間不得為空白",
-    "txt-edgeEditNoEndDate": "Edge結束時間不得為空白",
-    "txt-edgeEditPastEndDate": "Edge結束時間不得為過去時間",
     "txt-threatEndTimeError": "結束時間須為今天以前",
     "txt-ipValidationFail": "請輸入正確IP/Domain格式",
     "txt-threatDateError": "時間不得為未來時間",
