--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -340,6 +340,8 @@
     "txt-deviceMap": "裝置地圖",
     "txt-safetyScan": "安全掃描",
     "txt-safetyScanType": "安全掃描類型",
+    "txt-export-cpe": "匯出CPE",
+    "txt-report-nccst": "回報NCCST",
     "txt-hostInfo": "主機資訊",
     "txt-viewInfo": "查看內容",
     "txt-hostList2": "主機清單",
