Start working on the HMD settings product regex page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -768,7 +768,12 @@
     "txt-success": "Total success count",
     "txt-fail": "Total fail count",
     "txt-duplicatedIP": "IP already exists, please enter another IP",
-    "txt-noDevice": "No device is available",    
+    "txt-noDevice": "No device is available",
+    "txt-VansProductRegex": "VANS Software List",
+    "txt-CPEconvertTest": "CPE Convert Test",
+    "txt-CPEinputTest": "Input CPE",
+    "txt-CPEconvertResult": "CPE Convert Result",
+    "txt-convertTest": "Convert Test",
     "txt-editFloorMap": "$t(txt-edit) $t(txt-floorMap)",
     "txt-viewDevice": "$t(txt-view) $t(alert.txt-ipBasicInfo)",
     "txt-viewHMD": "$t(txt-view) $t(alert.txt-safetyScanInfo)",
