--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -770,6 +770,11 @@
     "txt-fail": "上傳失敗筆數",
     "txt-duplicatedIP": "IP已存在，請重新輸入",
     "txt-noDevice": "此座位無裝置",
+    "txt-VansProductRegex": "VANS軟體抓取表",
+    "txt-CPEconvertTest": "CPE轉換測試",
+    "txt-CPEinputTest": "輸入CPE測試",
+    "txt-CPEconvertResult": "轉換結果CPE",
+    "txt-convertTest": "轉換測試",
     "txt-editFloorMap": "$t(txt-edit)$t(txt-floorMap)",
     "txt-viewDevice": "$t(txt-view)$t(alert.txt-ipBasicInfo)",
     "txt-viewHMD": "$t(txt-view)$t(alert.txt-safetyScanInfo)",
