--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -44,6 +44,8 @@
   "-2001": "目標未明",
   "-2002": "已到期",
 
+  "-4002": "CPE格式錯誤",
+
   "-5000": "格式錯誤",
   "-5001": "Port number不得重複",
   "-5002": "IP不得重複",
