Complete the Product Regex section for HMD Settings page.

--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -84,6 +84,7 @@
   "-9013": "參數為NULL",
   "-9014": "字串過長",
   "-9015": "裝置不存在",
+  "-9016": "Regex格式錯誤",
 
   "-9100": "解析Json失敗",
   "-9101": "解析檔案失敗",
