--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -84,6 +84,7 @@
   "-9013": "Param is NULL",
   "-9014": "String is too long",
   "-9015": "Inventory not exist",
+  "-9016": "Regex syntax error",
 
   "-9100": "Parse Json Fail",
   "-9101": "Parse File Fail",
