--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -178,6 +178,10 @@
   "txt-description": "描述",
   "txt-reference": "參考",
   "txt-syslog": "日誌串流",
+  "txt-shutdown": "關機",
+  "txt-logOff": "登出",
+  "txt-disconnectedNet": "斷網",
+  "txt-resume": "恢復",
   "txt-viewJSON": "$t(txt-view)JSON",
   "txt-exportCSV": "$t(txt-export)CSV",
   "txt-exportPDF": "$t(txt-export)PDF",
@@ -677,6 +681,8 @@
     "txt-irMsg": "IR資料已上傳至",
     "txt-itemSelection": "電腦採證",
     "txt-checkConnections": "連線驗證",
+    "txt-lastTriggerTime": "上次觸發時間",
+    "txt-executeTime": "執行時間",
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
