Update EDR button list logic for HMD EDR tab.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -178,10 +178,6 @@
   "txt-description": "Description",
   "txt-reference": "Reference",
   "txt-syslog": "Syslog",
-  "txt-shutdown": "Shutdown",
-  "txt-logOff": "Log Off",
-  "txt-disconnectedNet": "Disconnected",
-  "txt-resume": "Resume",
   "txt-viewJSON": "$t(txt-view) JSON",
   "txt-exportCSV": "$t(txt-export) CSV",
   "txt-exportPDF": "$t(txt-export) PDF",
@@ -683,6 +679,10 @@
     "txt-checkConnections": "Check connections",
     "txt-lastTriggerTime": "Trigger Time",
     "txt-executeTime": "Execute Time",
+    "txt-shutdownHost": "Shutdown",
+    "txt-logoffAllUsers": "Log Off",
+    "txt-netcut": "Disconnected",
+    "txt-netcutResume": "Resume",
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
