Add more section and show/hide button for EDR. Show confirm dialog for EDR buttons.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -683,6 +683,7 @@
     "txt-logoffAllUsers": "Log Off",
     "txt-netcut": "Disconnected",
     "txt-netcutResume": "Resume",
+    "txt-confirmTo": "Confirm to ",
     "scan-list": {
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware",
