Add the new department tree to the Host page. Update the new department list across SCP.

--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -85,6 +85,7 @@
   "-9014": "String is too long",
   "-9015": "Inventory not exist",
   "-9016": "Regex syntax error",
+  "-9017": "Child department exist",
 
   "-9100": "Parse Json Fail",
   "-9101": "Parse File Fail",
