--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -270,5 +270,20 @@
 		"txt-port": "NCCST-Port",
 		"txt-account": "Account",
 		"txt-password": "Password"
-	}
+	},
+	"txt-device-comment": "Device Comment",
+	"txt-unit-select": "Device Unit Management",
+	"required": {
+		"oid": "Unit OID must be required",
+		"deviceId": "Device must be required",
+		"deviceName" : "Device Name must be required",
+		"deviceCompany": "Device Company must be required",
+		"unit": "Unit must be required",
+		"protectType": "Device protectType must be required",
+		"abbreviation": "Device abbreviation must be required",
+		"level": "Unit level must be required",
+		"industryType": "Unit industryType must be required"
+	},
+	"txt-addUnitFromDepartment": "Select From Department ",
+	"txt-existingDepartment": "Select Unit From SOC Unit"
 }
