--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -767,6 +767,7 @@
     "txt-uploadFailedMAC": "MAC格式有錯誤，請重新上傳",
     "txt-uploadFailed": "以下資料上傳失敗，請再試一次",
     "txt-autoSettings": "自動執行設定",
+    "txt-batchUpdates": "批次設定",
     "txt-withHeader": "包含表頭",
     "txt-selectIP": "請選擇IP欄位",
     "txt-testQuery": "查詢測試",
