--- a/locales/zh/lms.json
+++ b/locales/zh/lms.json
@@ -14,6 +14,7 @@
   "18": "安裝路徑不相符",
   "19": "無效註冊碼",
 
+  "-98": "檔案上傳失敗",
   "-99": "伺服器連線異常",
   "-2000": "設定初始化錯誤",
   "-2001": "SOAP_SSL初始化錯誤",
@@ -31,6 +32,7 @@
   "-2014": "WMI初始化錯誤",
   "-2015": "無法透過WMI取得網路卡資訊",
   "-2016": "無可用網路卡資訊",
+  "-2022": "上傳的license檔是未啟用離線註冊檔",
 
   "l-license": "授權",
   "l-license-status": "授權狀態",
@@ -42,6 +44,8 @@
   "l-license-renew-key": "更新授權碼",
   "l-activate": "啟用",
   "l-activate-success": "啟用成功",
+  "l-upload-offline-file": "上傳離線註冊檔",
+  "l-offline-upload-msg": "無法連線註冊伺服器，請下載註冊檔並轉交聯絡窗口驗證，後續再由首頁以驗證檔上傳方式離線註冊",
 
   "key-acivated": "授權碼已啟用過",
   "key-empty": "授權碼不得為空白"
