Complete the LMS registraty license updates.

--- a/locales/zh/lms.json
+++ b/locales/zh/lms.json
@@ -32,6 +32,7 @@
   "-2014": "WMI初始化錯誤",
   "-2015": "無法透過WMI取得網路卡資訊",
   "-2016": "無可用網路卡資訊",
+  "-2020": "註冊檔已存在",
   "-2022": "上傳的license檔是未啟用離線註冊檔",
 
   "l-license": "授權",
