--- a/locales/en/lms.json
+++ b/locales/en/lms.json
@@ -32,6 +32,7 @@
 	"-2014": "WMI initialize error",
 	"-2015": "Network card info unavailabled via WMI",
 	"-2016": "Network card info unavailabled",
+	"-2020": "License already exist",
 	"-2022": "The file uploaded is inactive license",
 
 	"l-license": "License",
